--- a/Sanity Automation Report for Product Central.html
+++ b/Sanity Automation Report for Product Central.html
@@ -44,7 +44,7 @@
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<li>
                 <a href='#!'>
-                    <span class='label suite-start-time blue darken-3'>Sep 7, 2023 08:47:12 PM</span>
+                    <span class='label suite-start-time blue darken-3'>Sep 7, 2023 11:22:36 PM</span>
 				</a>
 			</li>
 			<li>
@@ -135,10 +135,10 @@
 					<canvas id='child-analysis' width='100' height='80'></canvas>
 				</div>
 				<div class='block text-small'>
-					<span class='tooltipped' data-position='top' data-tooltip='100%'><span class='strong'>1</span> step(s) passed</span>
+					<span class='tooltipped' data-position='top' data-tooltip='7.143%'><span class='strong'>1</span> step(s) passed</span>
 				</div>
 				<div class='block text-small'>
-					<span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> step(s) failed, <span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> others
+					<span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> step(s) failed, <span class='strong tooltipped' data-position='top' data-tooltip='92.857%'>13</span> others
 				</div>
 			</div>
 		</div>
@@ -155,15 +155,15 @@
 				
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
-						<span class='test-name'>Verify author can add bulleted and numbered lists</span>
-						<span class='test-time'>Sep 7, 2023 08:47:13 PM</span>
+						<span class='test-name'>Verify that the value of the filters are based on the tags/properties of the search results</span>
+						<span class='test-time'>Sep 7, 2023 11:22:36 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Sep 7, 2023 08:47:13 PM</span>
-	<span class='label end-time'>Sep 7, 2023 08:48:13 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 1m 0s+310ms</span>
+	<span class='label start-time'>Sep 7, 2023 11:22:36 PM</span>
+	<span class='label end-time'>Sep 7, 2023 11:23:09 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 32s+93ms</span>
 </div>
 	<div class='test-steps'>
 		<table class='bordered table-results'>
@@ -175,9 +175,74 @@
 				</tr>
 			</thead>
 			<tbody>
+				<tr class='log' status='info'>
+					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
+					<td class='timestamp'>11:22:38 PM</td>
+					<td class='step-details'>Wait for the page to load.</td>
+				</tr>
+				<tr class='log' status='info'>
+					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
+					<td class='timestamp'>11:22:38 PM</td>
+					<td class='step-details'>Click on search field</td>
+				</tr>
+				<tr class='log' status='info'>
+					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
+					<td class='timestamp'>11:22:41 PM</td>
+					<td class='step-details'>Send text to search field</td>
+				</tr>
+				<tr class='log' status='info'>
+					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
+					<td class='timestamp'>11:22:42 PM</td>
+					<td class='step-details'>Click on enter</td>
+				</tr>
+				<tr class='log' status='info'>
+					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
+					<td class='timestamp'>11:22:42 PM</td>
+					<td class='step-details'>Select product from product dropdown</td>
+				</tr>
+				<tr class='log' status='info'>
+					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
+					<td class='timestamp'>11:22:52 PM</td>
+					<td class='step-details'>Close the dropdown</td>
+				</tr>
+				<tr class='log' status='info'>
+					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
+					<td class='timestamp'>11:22:55 PM</td>
+					<td class='step-details'>Verified selecting product appears on result table</td>
+				</tr>
+				<tr class='log' status='info'>
+					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
+					<td class='timestamp'>11:22:55 PM</td>
+					<td class='step-details'>Click on product on result table</td>
+				</tr>
+				<tr class='log' status='info'>
+					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
+					<td class='timestamp'>11:22:57 PM</td>
+					<td class='step-details'>Click on breadcrumb</td>
+				</tr>
+				<tr class='log' status='info'>
+					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
+					<td class='timestamp'>11:23:00 PM</td>
+					<td class='step-details'>Click on search products</td>
+				</tr>
+				<tr class='log' status='info'>
+					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
+					<td class='timestamp'>11:23:02 PM</td>
+					<td class='step-details'>Send expected title</td>
+				</tr>
+				<tr class='log' status='info'>
+					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
+					<td class='timestamp'>11:23:02 PM</td>
+					<td class='step-details'>Click on product</td>
+				</tr>
+				<tr class='log' status='info'>
+					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
+					<td class='timestamp'>11:23:06 PM</td>
+					<td class='step-details'>Verified actual title matches with expected title</td>
+				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>8:48:13 PM</td>
+					<td class='timestamp'>11:23:09 PM</td>
 					<td class='step-details'>Test passed</td>
 				</tr>
 			</tbody>
@@ -226,25 +291,25 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Steps
-					<div class='panel-lead'>1</div>
+					<div class='panel-lead'>14</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Sep 7, 2023 08:47:12 PM</div>
+					<div class='panel-lead'>Sep 7, 2023 11:22:36 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Sep 7, 2023 08:48:13 PM</div>
+			 		<div class='panel-lead'>Sep 7, 2023 11:23:09 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>61,292ms</div>
+					<div class='panel-lead'>33,066ms</div>
 				</div>
 			</div>
 		</div>
@@ -271,7 +336,7 @@
 				errorChild: 0,
 				warningChild: 0,
 				skipChild: 0,
-				infoChild: 0,
+				infoChild: 13,
 				exceptionsChild: 0,
 				
 				passGrandChild: 0,
